packages/kununu-footer/index.scss
@import '~@kununu/kununu-theme-v2/scss/base/variables';

.footer {
  background-color: $gray-base;
  border-color: $gray-base-10;
  display: table;
  padding-top: 20px;
  margin-bottom: 0;
  width: 100%;
}

.contentSection {
  margin-right: -20px;
  margin-left: -20px;
}

.simpleMobile {
  padding-top: 0;

  @media (min-width: $screen-sm-min) {
    padding-top: 20px;
  }

  .bottomMenu {
    border-top: 0;

    @media (min-width: $screen-sm-min) {
      border-top: 1px solid $gray-base-60;
    }
  }

  .contentSection {
    display: none;

    @media (min-width: $screen-sm-min) {
      display: block;
    }

    @media (min-width: $screen-md-min) {
      display: flex;
    }
  }
}

.footerNav {
  list-style: none;
  margin-bottom: 0;
  overflow: hidden;
  padding-left: 0;
  transition: all .5s;

  a {
    color: $text-muted-dark;
    display: inline-block;
    font-size: $font-size-xs;
    width: 100%;
    padding: 4px 0;

    @media (min-width: $screen-md-min) {
      font-size: $font-size-base;
    }

    @media (max-width: $screen-xs-max) {
      display: block;
      transition: padding .1s cubic-bezier(.215, .61, .355, 1) .5s;
      font-size: $font-size-base;
    }

    &:hover {
      text-decoration: underline;
      color: $white;
    }
  }

  &.col {
    @media (max-width: $screen-xs-max) {
      max-height: 0;

      &.open {
        max-height: 220px;

        a {
          transition: padding .4s cubic-bezier(.215, .61, .355, 1);
          padding-left: 20px;
        }
      }
    }
  }

  &.row {
    margin-right: -20px;
    margin-left: -20px;
    padding: 10px 0 0;
    margin: 0;

    @media (max-width: $screen-sm-max) {
      text-align: center;
    }

    li {
      display: inline-block;
      padding-left: 2px;

      &,
      a {
        display: inline-block;
      }

      a {
        padding: 4px 0;
        font-size: $font-size-small;

        @media (min-width: $screen-md-min) {
          font-size: $font-size-base;
        }

        &:hover {
          text-decoration: none;
          color: $white;
        }
      }

      &:after {
        content: '\2219'; // bullet http://codepoints.net/U+2219
        display: inline-block;
        padding-left: 2px;
      }

      &:last-child {
        padding-left: 0;

        &:after {
          content: none;
        }
      }
    }
  }
}

.title {
  color: $gray-base-40;
  margin: 0;
  padding: 0;
  letter-spacing: 0;
  line-height: $line-height-h3;
  font-weight: 600;
  font-size: 14px;
  margin-bottom: $baseline-grid * 2;
  display: none;

  @media (min-width: $screen-sm-min) {
    display: block;
  }

  @media (min-width: $screen-md-min) {
    font-size: 18px;
  }
}

.icon {
  position: relative;
  top: 2px;
}

.heart {
  fill: $red;
  display: inline-block;
  width: 12px;
  height: 12px;
}

.plus {
  width: 11px;
  height: 11px;
  fill: $gray-base-40;
}

.tuvColumn,
.menuColumns,
.infoTextColumn {
  float: left;
  position: relative;
  min-height: 1px;
  padding-left: 20px;
  padding-right: 20px;
  margin-bottom: 18px;
}

.flex {
  @media (min-width: $screen-md-min) {
    display: flex;
  }
}

.menuColumns,
.tuvColumn,
.infoTextColumn {
  @media (min-width: $screen-md-min) {
    flex-grow: 1;
  }
}

.menuColumns {
  width: 100%;

  @media (min-width: $screen-md-min) {
    min-width: 200px;
  }

  @media (min-width: $screen-sm-min) {
    width: 25%;
  }
}

.tuvColumn {
  padding: 0;
  width: 8.333333%;

  .tuvIcon {
    padding: 0;
    width: 128px;
    height: auto;
  }

  @media (min-width: $screen-md-min) {
    min-width: 120px;
  }
}

.infoTextColumn {
  width: 100%;
  text-align: center;

  @media (min-width: $screen-md-min) {
    text-align: right;
    max-width: 550px;
  }
}

.footerNavItem {
  position: relative;
  display: block;

  a {
    width: auto;
  }

  &.active a {
    font-weight: $font-weight-semibold;
  }
}

.infoText {
  font-size: $font-size-sm;
  width: 100%;

  @media (min-width: $screen-md-min) {
    font-size: $font-size-base;
  }
}

.bottomMenu {
  border-top: 1px solid $gray-base-60;
  display: table;
  width: 100%;
  min-height: 45px;

  > div {
    float: right;

    &:first-child {
      float: left;
    }
  }
}

.accordionTitle {
  background-color: transparent;
  border: 0;
  color: $gray-base-40;
  font-weight: $font-weight-semibold;
  margin-top: 18px;
  outline: none;
  position: relative;
  padding: 0 0 11px;
  text-align: left;
  width: 100%;
  transition: all 1s ease;

  @media (min-width: $screen-sm-min) {
    display: none;
  }

  .icon {
    position: absolute;
    right: 0;
    transition: all .3s ease;
  }

  &.open {
    .icon {
      transform: rotate(45deg);
    }
  }

  &:hover {
    text-decoration: none;
  }
}

.itemIcon {
  display: block;
  float: right;

  @media (min-width: $screen-sm-min) {
    display: none;
  }
}

.titleIcon {
  display: inline-block;
  padding-left: 10px;
  vertical-align: middle;

  @media (min-width: $screen-sm-min) {
    display: none;
  }
}

.tooltipContent {
  padding: 5px 0 0 15px;
  text-align: left;
}

.hiddenXs {
  display: none;

  @media (min-width: $screen-sm-min) {
    display: block;
  }
}

.hiddenSm {
  display: none;

  @media (min-width: $screen-md-min) {
    display: block;
  }
}

.visibleXs {
  @media (min-width: $screen-sm-min) {
    display: none;
  }
}

.dropdown {
  @media (min-width: $screen-md-min) {
    font-size: $font-size-base;

    li {
      font-size: $font-size-base;
    }
  }
}

